# freqanalysis

./: README.docx  README.md
Vmtransform/transform/: makefile
attack/Temp_locality/: Calculate_dedup.cc  Locality_Attack.cc  Locality_Count.cc  Locality_script.sh  makefile
attack/basic/: Basic_attack.cc  Basic_count.cc  Basic_script.sh  basic_attack.cc  basic_count.cc  basic_script.sh  basic_script_vm.sh  makefile  test_user004  testout
attack/basic/ver_dsn/: READEME  basic-attack.sh  count.cc  db-print.cc  db-rank.cc  freq-analysis.cc  fsl-trace.sh  makefile
attack/basic/ver_dsn/fs-hasher/: AUTHORS  Makefile  Makefile.am  README  config.h.in  config.status  hf-anonymizer.c  hf-stat.c  murmurhash3.c  rbtree.h
attack/basic/ver_dsn/fs-hasher/.deps/: hf-anonymizer.Po  hf-simdex.Po  hf-stat.Po  libhashfile.Po  liblog.Po
attack/basic/ver_dsn/fs-hasher/manpages/: fs-hasher.1  hf-stat.1
attack/basic/ver_new/fs-hasher/: Makefile.in  TODO  config.h  configure.ac  fs-hasher.c  liblog.c
attack/basic/ver_new/fs-hasher/.deps/: fs-hasher.Po  murmurhash3.Po  rbtree.Po
attack/basic/ver_new/fs-hasher/examples/: Makefile  read_hashfile.c
attack/basic/ver_new/fs-hasher/manpages/: libhashfile.3
attack/locality/: Locality_attack.cc  Locality_count.cc  Locality_script.sh  locality_attack.cc  locality_count.cc  locality_script_vm.sh  makefile
attack/version_int64/: Locality_Attack.cc  Locality_Count.cc  gen1.sh  makefile
case/: readme
case/ddfs/: DDFS.cpp  bloom.c  bloom.cpp  bloom.h  container_manager.cpp  container_manager.h  fp_index.cpp  fp_index.h  lrucache.cpp  lrucache.h  lrutester  makefile  readme
defense/: Defense_script.sh  K_minhash.cc  Locality_attack_E.cc  makefile
defense/combined/: combined.sh  locality_attack_e.cc  makefile
defense/minambling/: locality_count.cc
defense/minhash/: Defense_script.sh  K_minhash.cc  Locality_attack_E.cc  defense_script.sh  k_minhash.cc  locality_attack_e.cc  makefile
defense/scrambling/: Scrambling.cc  makefile  scrambling.sh
prototype/: bloom.c  bloom.cpp  bloom.h  combined.cc  combined.sh  container_manager.cc  container_manager.cpp  container_manager.h  ddfs.cc  dedup_performance.sh  fp_index.cc  lrucache.cc  makefile  mle.sh
src/defense/: kminhash.cc  mh-count.cc
src/new_defense/: Defense_script.sh  Locality_Attack_E.cc  Locality_attack_E.cc  kminhash.cc  makefile
util/debug/: README.md  cal.cpp  db_rank.cc  lr_checker.cc
util/fs-hasher/: .hf-stat.c.swp  ChangeLog  Makefile  NEWS  config.status  configure  gen.sh  hf-simdex.c  liblog.h  list.h
(+28 files in other folders)
